; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_extent_dss.c_extent_dss_boot.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_extent_dss.c_extent_dss_boot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@have_dss = common dso_local global i32 0, align 4
@dss_base = common dso_local global i8* null, align 8
@dss_extending = common dso_local global i32 0, align 4
@ATOMIC_RELAXED = common dso_local global i32 0, align 4
@dss_exhausted = common dso_local global i32 0, align 4
@dss_max = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @extent_dss_boot() #0 {
  %1 = load i32, i32* @have_dss, align 4
  %2 = call i32 @cassert(i32 %1)
  %3 = call i8* @extent_dss_sbrk(i32 0)
  store i8* %3, i8** @dss_base, align 8
  %4 = load i32, i32* @ATOMIC_RELAXED, align 4
  %5 = call i32 @atomic_store_b(i32* @dss_extending, i32 0, i32 %4)
  %6 = load i8*, i8** @dss_base, align 8
  %7 = icmp eq i8* %6, inttoptr (i64 -1 to i8*)
  %8 = zext i1 %7 to i32
  %9 = load i32, i32* @ATOMIC_RELAXED, align 4
  %10 = call i32 @atomic_store_b(i32* @dss_exhausted, i32 %8, i32 %9)
  %11 = load i8*, i8** @dss_base, align 8
  %12 = load i32, i32* @ATOMIC_RELAXED, align 4
  %13 = call i32 @atomic_store_p(i32* @dss_max, i8* %11, i32 %12)
  ret void
}

declare dso_local i32 @cassert(i32) #1

declare dso_local i8* @extent_dss_sbrk(i32) #1

declare dso_local i32 @atomic_store_b(i32*, i32, i32) #1

declare dso_local i32 @atomic_store_p(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
